<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java</string>
    <string name="qty"><b>Quantity</b></string>
    <string name="no_value">0</string>
    <string name="order">Order</string>
    <string name="price"><b>order summary</b></string>
    <string name="cost"><b>£0</b></string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="coffee"><b>How Many Coffees Would You Like To Order?</b></string>
    <string name="thanks"><b>Thank you for placing your order!</b></string>
    <string name="top">Toppings</string>
    <string name="cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="hint">Name</string>
    <string name="next">Next Customer</string>

    <!--strings from MainActivity.java-->
    <string name="order_summary_name">Name: <xliff:g id="nameEntered" example="Amy">%s</xliff:g></string>
    <string name="addcream">Add Whipped Cream</string>
    <string name="choc">Add Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="total">Total</string>
    <string name="thank_you">Thank You!</string>
</resources>
